--- a/dos33.html
+++ b/dos33.html
@@ -2714,16 +2714,16 @@ With that "legalese" out of the way ... enjoy the read!
                     159 ;
                     160 ; OCTD - OUTPUT A CHAR TO DISK
                     161 ;
-                    162 OCTD        EQU *
-                    163             JSR TSTRUN      ; GO TEST RUN
-                    164             BCS ICFDB       ;BRANCH IF NOT RUN MODE
-                    165             LDA SVA         ; CHAR IN SAVED ACU
-                    166             STA CCBDAT      ; PUT INTO CCBDATA AREA
-                    167             LDA #CRQWR      ; SET WRITE
-                    168             STA CCBREQ
-                    169             LDA #CRMNBT     ; SET NEXT BYTE
-                    170             STA CCBRQM
-                    171             JMP DOSGO       ; GO WRITE BYTE
+                    162 <a class='f' name='OCTD'     >OCTD        </a>EQU *
+260E:20 5E 26       163             JSR TSTRUN      ; GO TEST RUN
+2611:B0 66          164             BCS ICFDB       ;BRANCH IF NOT RUN MODE
+2613:AD 5C 2A       165             LDA SVA         ; CHAR IN SAVED ACU
+2616:8D C3 35       166             STA CCBDAT      ; PUT INTO CCBDATA AREA
+2619:A9 04          167             LDA #CRQWR      ; SET WRITE
+261B:8D BB 35       168             STA CCBREQ
+261E:A9 01          169             LDA #CRMNBT     ; SET NEXT BYTE
+2620:8D BC 35       170             STA CCBRQM
+2623:4C A8 26       171             JMP DOSGO       ; GO WRITE BYTE
                     172 ;
                     173 ; INCFD - INPUT A CHAR FROM DISK
                     174 ;
