--- a/dos33.html
+++ b/dos33.html
@@ -2823,7 +2823,7 @@ With that "legalese" out of the way ... enjoy the read!
 26B0:C9 05          010             CMP #<span class='n'>5</span>                                          ; <a class='magic' name='_26B1'>magic number</a>
 26B2:F0 03          011             BEQ YESEOF
 26B4:4C 5E 36       012             JMP CLOSFILE    ;NO. CLOSE &amp; COMPLAIN
-26B7:4C 92 36       013 YESEOF      JMP EOFFIX      ;MAYBE FIX IT UP?
+26B7:4C 92 36       013 <a class='f' name='YESEOF'   >YESEOF      </a>JMP EOFFIX      ;MAYBE FIX IT UP?
 26BA:EA             014             NOP                                             ; <a class='mem' name='_26BA'>wastes</a> 1 byte
                     015 ***************************
                     016 *
