--- a/dos33.html
+++ b/dos33.html
@@ -2831,15 +2831,15 @@ With that "legalese" out of the way ... enjoy the read!
                     018 *
                     019 ***************************
                     020             DO <a class='e' href='#DOS33B'>DOS33B</a>
-26BB:20 69 3A       021 DOSGO2A     JSR MOVEOF      ; MOVE END OF FILE PATCH        ; Called from <a class='x' href='#BACK'>BACK</a>
+26BB:20 69 3A       021 <a class='f' name='DOSGO2A'  >DOSGO2A     </a>JSR MOVEOF      ; MOVE END OF FILE PATCH        ; Called from <a class='x' href='#BACK'>BACK</a>
                     022             ELSE<span class='macro'>
                     023             NOP                                             
                     024 DOSGO2A     NOP                                             </span>Why isn't this label on the previous line???<span class='macro'>
                     025             NOP                                             </span>
                     026             FIN
-26BE:A2 00          027             LDX #0          ; SET OTHER EIF
+26BE:A2 00          027             LDX #<span class='n'>0</span>          ; SET OTHER EIF
 26C0:8E C3 35       028             STX CCBDATA
-26C3:60             029 DG3         RTS
+26C3:60             029 <a class='f' name='DG3'      >DG3         </a>RTS
                     030 ;
                     031             PAGE
                     032 ;
