Cleanup Easter Egg

--- a/dos33.html
+++ b/dos33.html
@@ -9673,13 +9673,18 @@ NOTE: You'll need a DOS that isn't brain dead.
 Look for an upcoming announcement in 2017 in c.s.a2
 
 ; Apple //e
-9600<C600.C700M
+9600<C600.C6FFM
 9636:8B
 9600G
 
 ; Apple //c
-9600<C600.C700M
-96xx:
+9600<C600.C6FFM
+96xx: TODO
+9600G
+
+; Laser 128
+9600<C600.C6FFM
+96xx: TODO
 9600G
 
 (*) Using the original positive meaning 'curiosious benign probing for the sake of learning', before it got hijacked to mean a negative connotation: 'destructive entry.'
